Fix invisible version dropdown

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -31,16 +31,9 @@
   color: #EE4B2B !important;
 }
 
-/* Hide the site_name "TerraTorch" in the header */
-@media screen and (min-width: 1220px) {
-  .md-header__title .md-header__topic:first-child {
-    display: none !important;
-  }
-}
-
 /* Hide the site_name "TerraTorch" in the header and sidebar */
 @media screen and (min-width: 1220px) {
-  .md-header__title .md-header__topic:first-child {
+  img[src="figs/logo_header.png"] {
     display: none !important;
   }
   .md-nav__title {
